--- a/package.json
+++ b/package.json
@@ -1,58 +1,34 @@
 {
-  "name": "feedbackapp",
+  "name": "feedbackapp-backend",
   "version": "1.0.0",
-  "main": "index.ts",
+  "description": "Backend API for Feedback Application",
+  "main": "dist/index.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web",
-    "clean": "npx rimraf node_modules package-lock.json",
-    "reinstall": "npm run clean && npm install --legacy-peer-deps",
-    "doctor": "npx expo-doctor",
-    "fix-deps": "npx expo install --fix"
+    "start": "node dist/index.js",
+    "dev": "nodemon src/index.ts",
+    "build": "tsc",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "@react-native-async-storage/async-storage": "2.1.2",
-    "@react-native-picker/picker": "2.11.0",
-    "@react-navigation/bottom-tabs": "^7.3.12",
-    "@react-navigation/native": "^7.1.8",
-    "@react-navigation/stack": "^7.3.1",
-    "axios": "1.8.4",
-    "expo": "~53.0.9",
-    "expo-background-fetch": "~13.1.5",
-    "expo-device": "~7.1.4",
-    "expo-localization": "~16.1.5",
-    "expo-notifications": "~0.31.1",
-    "expo-print": "~14.1.4",
-    "expo-sharing": "~13.1.5",
-    "expo-status-bar": "~2.2.3",
-    "expo-task-manager": "~13.1.5",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
-    "react-native": "0.79.2",
-    "react-native-chart-kit": "^6.12.0",
-    "react-native-gesture-handler": "~2.24.0",
-    "react-native-paper": "^5.14.1",
-    "react-native-reanimated": "~3.17.4",
-    "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.10.0",
-    "react-native-svg": "15.11.2",
-    "victory-native": "^36.6.5"
+    "axios": "^1.8.4",
+    "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
+    "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.13.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.26.0",
-    "@react-navigation/native-stack": "^7.3.12",
-    "@types/react": "~19.0.10",
-    "@types/react-navigation": "^3.0.8",
-    "typescript": "~5.8.3"
-  },
-  "expo": {
-    "doctor": {
-      "reactNativeDirectoryCheck": {
-        "listUnknownPackages": false
-      }
-    }
-  },
-  "private": true
+    "@types/bcrypt": "^5.0.2",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^5.0.1",
+    "@types/jsonwebtoken": "^9.0.9",
+    "@types/node": "^22.13.17",
+    "nodemon": "^3.1.9",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.2"
+  }
 }
